CR changes, add company field to stock locations

--- a/admin/app/views/spree/admin/orders/_special_instructions.html.erb
+++ b/admin/app/views/spree/admin/orders/_special_instructions.html.erb
@@ -1,4 +1,4 @@
-<% if @order.store.prefers_special_instructions_enabled? && @order.special_instructions.present? %>
+<% if @order.special_instructions.present? %>
   <div class="card mb-4">
     <div class="card-header">
       <h5 class="card-title">
