Add possibility to configure address company and order special instructions fields (#12789)
* Configure address company field in the store preferences

* Configure special instructions field visibility in the store checkout settings

* CR changes, add company field to stock locations

* Update core/db/migrate/20250527134027_add_company_to_spree_stock_locations.rb

---------

Co-authored-by: Damian Legawiec <damian@getvendo.com>

--- a/admin/app/views/spree/admin/stores/form/_checkout.html.erb
+++ b/admin/app/views/spree/admin/stores/form/_checkout.html.erb
@@ -31,18 +31,38 @@
   <div class="col-lg-5">
     <div class="card mb-4">
       <div class="card-header">
-        <h5 class="card-title"><%= Spree.t(:guest_checkout) %></h5>
+        <h5 class="card-title"><%= Spree.t(:settings) %></h5>
       </div>
 
       <div class="card-body">
-        <p class="text-muted">
-          <%= Spree.t('admin.checkout_settings.guest_checkout.description') %>
-        </p>
-
         <div class="custom-control custom-checkbox mb-3">
           <%= f.check_box :preferred_guest_checkout, class: "custom-control-input" %>
           <%= f.label :preferred_guest_checkout, Spree.t('admin.checkout_settings.guest_checkout.label'), class: "custom-control-label" %>
           <%= f.error_message_on :preferred_guest_checkout %>
+
+          <p class="text-muted mt-1">
+            <%= Spree.t('admin.checkout_settings.guest_checkout.description') %>
+          </p>
+        </div>
+
+        <div class="custom-control custom-checkbox mb-3">
+          <%= f.check_box :preferred_company_field_enabled, class: "custom-control-input" %>
+          <%= f.label :preferred_company_field_enabled, Spree.t('admin.store_form.company_field.label'), class: "custom-control-label" %>
+          <%= f.error_message_on :preferred_company_field_enabled %>
+
+          <div class="text-muted mt-1">
+            <%= Spree.t('admin.store_form.company_field.description') %>
+          </div>
+        </div>
+
+        <div class="custom-control custom-checkbox">
+          <%= f.check_box :preferred_special_instructions_enabled, class: "custom-control-input" %>
+          <%= f.label :preferred_special_instructions_enabled, Spree.t('admin.checkout_settings.special_instructions.label'), class: "custom-control-label" %>
+          <%= f.error_message_on :preferred_special_instructions_enabled %>
+
+          <p class="text-muted mt-1">
+            <%= Spree.t('admin.checkout_settings.special_instructions.description') %>
+          </p>
         </div>
       </div>
     </div>
