--- a/admin/app/views/spree/admin/variants/_variant.html.erb
+++ b/admin/app/views/spree/admin/variants/_variant.html.erb
@@ -1,7 +1,5 @@
 <% cache variant do %>
-  <% if variant.product.deleted? %>
-    <% variant_url = "" %>
-  <% elsif variant.is_master? %>
+  <% if variant.is_master? || variant.product.deleted? %>
     <% variant_url = spree.edit_admin_product_path(variant.product) %>
   <% else %>
     <% variant_url = spree.edit_admin_product_variant_path(variant.product, variant) %>
@@ -14,11 +12,6 @@
       <% if variant.options_text.present? %>
         <p class="text-muted my-1 font-size-sm">
           <%= variant.options_text %>
-        </p>
-      <% end %>
-      <% if variant.product.deleted? %>
-        <p class="text-muted my-1 font-size-sm">
-          (<%= Spree.t("admin.products.deleted") %>)
         </p>
       <% end %>
     </div>
