--- a/admin/app/views/spree/admin/shipping_methods/form/_display.html.erb
+++ b/admin/app/views/spree/admin/shipping_methods/form/_display.html.erb
@@ -21,5 +21,27 @@
         </div>
       </div>
     </div>
+
+    <div class="row">
+      <div class="col-lg-6">
+        <div class="form-group">
+          <%= f.label :admin_name, Spree.t(:internal_name) %>
+          <%= f.text_field :admin_name, class: 'form-control' %>
+          <%= f.error_message_on :admin_name %>
+        </div>
+
+        <p class="form-text text-muted small mt-2">
+          This will be displayed to admins.
+        </p>
+      </div>
+
+      <div class="col-lg-6">
+        <div class="form-group">
+          <%= f.label :code, Spree.t(:code) %>
+          <%= f.text_field :code, class: 'form-control' %>
+          <%= f.error_message_on :code %>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
