--- a/storefront/app/views/themes/default/spree/products/_details.html.erb
+++ b/storefront/app/views/themes/default/spree/products/_details.html.erb
@@ -39,7 +39,7 @@
       </div>
     <% end %>
 
-    <% default_product_properties.each do |product_property| %>
+    <% product_properties(product).each do |product_property| %>
       <div class="product-property py-4 border-b border-default">
 
         <%= link_to "#property_#{product_property.id}", class: 'text-sm uppercase tracking-widest inline-flex w-full justify-between !border-b-transparent', data: { action: 'accordion#toggle' } do %>
