--- a/storefront/app/views/themes/default/spree/shared/_cart_pane.html.erb
+++ b/storefront/app/views/themes/default/spree/shared/_cart_pane.html.erb
@@ -1,3 +1,6 @@
+<% order ||= current_order %>
+<% item_count ||= order&.item_count %>
+
 <!-- begin sidebar/slideover -->
 <div
   id="cart-pane"
@@ -25,13 +28,13 @@
       <span class='relative block w-6'>
         <%= render 'spree/shared/icons/cart' %>
         <span class='cart-counter w-full text-[8px] font-extrabold absolute top-[10px] text-center'>
-          <%= current_order.item_count if current_order.present? && current_order.item_count.to_i > 0 %>
+          <%= item_count if item_count&.positive? %>
         </span>
         <span class='sr-only'><%= Spree.t('storefront.cart.items_in_cart') %>, <%= Spree.t('storefront.cart.view_bag') %></span>
       </span>
     </div>
     <div class='flex-1 h-0 overflow-y-auto'>
-      <%= turbo_frame_tag cart_id(current_order), class: 'cart-contents', src: spree.cart_path, data: { turbo_permanent: true } %>
+      <%= turbo_frame_tag cart_id(order), class: 'cart-contents', src: spree.cart_path, data: { turbo_permanent: true } %>
     </div>
   </div>
 </div>
