--- a/admin/app/views/spree/admin/orders/return_authorizations/_form.html.erb
+++ b/admin/app/views/spree/admin/orders/return_authorizations/_form.html.erb
@@ -66,11 +66,11 @@
               <div class="variant-options"><%= inventory_unit.variant.options_text %></div>
             </td>
             <td><%= inventory_unit.state.humanize %></td>
-            <td
-              class="charged-amount"
-              data-charged-amount="<%= return_item.pre_tax_amount %>"
-            >
-              <%= return_item.display_pre_tax_amount %>
+            <% charged_amount =
+              inventory_unit.percentage_of_line_item *
+                inventory_unit.line_item.pre_tax_amount %>
+            <td class="charged-amount" data-charged-amount="<%= charged_amount %>">
+              <%= Spree::Money.new(charged_amount, currency: return_item.currency) %>
             </td>
             <td class="purchased-quantity">
               <%= inventory_unit.quantity %>
@@ -81,6 +81,7 @@
                                          {
                                            class: "refund-quantity-input form-control",
                                            min: 0,
+                                           required: true,
                                            data: {
                                              action: "return-items#updateSuggestedAmount",
                                            },
@@ -92,13 +93,14 @@
             </td>
             <td>
               <% if editable %>
-                <%= item_fields.text_field :pre_tax_amount,
-                                       {
-                                         class: "refund-amount-input form-control",
-                                         data: {
-                                           action: "return-items#updateTotalRefundAmount",
-                                         },
-                                       } %>
+                <%= item_fields.number_field :pre_tax_amount,
+                                         {
+                                           class: "refund-amount-input form-control",
+                                           required: true,
+                                           data: {
+                                             action: "return-items#updateTotalRefundAmount",
+                                           },
+                                         } %>
               <% else %>
                 <%= return_item.display_pre_tax_amount %>
               <% end %>
@@ -153,9 +155,9 @@
       <div class="form-group">
         <%= f.label :reason, raw(Spree.t(:reason) + required_span_tag) %>
         <%= f.select :return_authorization_reason_id,
-                      @reasons.collect { |r| [r.name, r.id] },
-                      { include_blank: Spree.t(:select_a_return_authorization_reason) },
-                      { class: "custom-select" } %>
+                 @reasons.collect { |r| [r.name, r.id] },
+                 { include_blank: Spree.t(:select_a_return_authorization_reason) },
+                 { class: "custom-select" } %>
         <%= f.error_message_on :reason %>
       </div>
 
