--- a/admin/app/assets/stylesheets/spree/admin/components/_media_form.scss
+++ b/admin/app/assets/stylesheets/spree/admin/components/_media_form.scss
@@ -6,7 +6,7 @@
   align-items: center;
   overflow: hidden;
   border-radius: $border-radius-lg;
-  border: 1px dashed $gray-100;
+  border: 1px dashed $border-color;
   background-color: rgba($gray-25, 0.5);
   padding: 0.5rem;
   cursor: pointer;
