--- a/storefront/app/views/themes/default/spree/page_sections/_featured_taxons.html.erb
+++ b/storefront/app/views/themes/default/spree/page_sections/_featured_taxons.html.erb
@@ -12,9 +12,9 @@
     <div class="gap-6 grid-cols-2 sm:grid-cols-4 lg:grid-cols-6 xl:gap-x-8 mb-7 hidden md:grid">
       <% section.links.each do |link| %>
         <%= page_builder_link_to link, title: link.label, class: 'group block overflow-hidden', target: link.open_in_new_tab.presence && '_blank' do %>
-          <% if link.linkable.image&.attached? && link.linkable.image&.variable? %>
+          <% if link.linkable.square_image&.attached? && link.linkable.square_image&.variable? %>
             <div class="flex space-y-2 flex-col">
-              <%= spree_image_tag(link.linkable.image, height: 300, width: 300, class: 'h-full w-full object-cover object-center group-hover:opacity-75 rounded-md bg-gray-200', loading: :lazy, alt: link.label) %>
+              <%= spree_image_tag(link.linkable.square_image, height: 300, width: 300, class: 'h-full w-full object-cover object-center group-hover:opacity-75 rounded-md bg-gray-200', loading: :lazy, alt: link.label) %>
               <span><%= link.label %></span>
             </div>
           <% else %>
@@ -47,9 +47,9 @@
           <% section.links.each do |link| %>
             <div class='swiper-slide w-[200px]'>
               <%= page_builder_link_to link, title: link.label, class: 'group block overflow-hidden', target: link.open_in_new_tab.presence && '_blank' do %>
-                <% if link.linkable.image&.attached? && link.linkable.image&.variable? %>
+                <% if link.linkable.square_image&.attached? && link.linkable.square_image&.variable? %>
                   <div class="flex space-y-2 flex-col">
-                    <%= spree_image_tag(link.linkable.image, height: 200, width: 200, class: 'h-full w-full object-cover object-center group-hover:opacity-75 rounded-md bg-gray-200', loading: :lazy, alt: link.label) %>
+                    <%= spree_image_tag(link.linkable.square_image, height: 200, width: 200, class: 'h-full w-full object-cover object-center group-hover:opacity-75 rounded-md bg-gray-200', loading: :lazy, alt: link.label) %>
                     <span><%= link.label %></span>
                   </div>
                 <% else %>
