show delete button for uploaded active storage images

--- a/admin/app/views/active_storage/_upload_form.html.erb
+++ b/admin/app/views/active_storage/_upload_form.html.erb
@@ -2,7 +2,7 @@
 <% height ||= 300 %>
 <% crop ||= false unless defined?(crop) %>
 <% auto_submit ||= false %>
-<% can_delete ||= true unless defined?(can_delete) %>
+<% show_delete_button = defined?(can_delete) ? can_delete : true %>
 <% css ||= '' %>
 
 <% if field_name && form %>
@@ -48,7 +48,7 @@
         <%= Spree.t('actions.select_file') %>
       </button>
 
-      <% if can_delete %>
+      <% if show_delete_button %>
         <button type="button" class="btn btn-danger ml-auto" data-action="active-storage-upload#remove" data-turbo-confirm="<%= Spree.t(:are_you_sure) %>">
           <%= icon('trash') %>
 
