--- a/cli/lib/spree_cli/templates/extension/config/importmap.rb.tt
+++ b/cli/lib/spree_cli/templates/extension/config/importmap.rb.tt
@@ -1,6 +1,6 @@
-pin 'application-<%= file_name.gsub('_', '-') %>', to: '<%= file_name %>/application.js', preload: false
+pin 'application-<%= file_name.tr("_","-") %>', to: '<%= file_name %>/application.js', preload: false
 
-pin_all_from <%= class_name %>::Engine.root.join('app/javascript/spree_<%= file_name %>/controllers'),
+pin_all_from <%= class_name %>::Engine.root.join('app/javascript/<%= file_name %>/controllers'),
              under: '<%= file_name %>/controllers',
-             to: '<%= file_name %>/controllers',
-             preload: 'application-<%= file_name.gsub('_', '-') %>'
+             to:    '<%= file_name %>/controllers',
+             preload: 'application-<%= file_name.tr("_","-") %>'
