--- a/admin/app/views/spree/admin/gift_card_batches/_form.html.erb
+++ b/admin/app/views/spree/admin/gift_card_batches/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-12">
+  <div class="col-lg-6 offset-lg-3">
     <div class="card mb-4">
       <div class="card-header">
         <h5 class="card-title">
@@ -13,30 +13,16 @@
           <%= f.text_field :prefix, class: 'form-control', disabled: f.object.persisted? %>
           <%= f.error_message_on :prefix %>
         </div>
-
-        <div class="row mb-3">
-          <div class="col-6">
-            <div class="form-group">
-              <%= f.label :amount, raw(Spree.t(:amount) + required_span_tag) %>
-              <%= f.number_field :amount, class: 'form-control', disabled: f.object.persisted?, required: true %>
-              <%= f.error_message_on :amount %>
-            </div>
-          </div>
-          <div class="col-6">
-            <div class="form-group">
-              <%= f.label :minimum_order_amount, raw(Spree.t(:minimum_order_amount) + required_span_tag) %>
-              <%= f.number_field :minimum_order_amount, class: 'form-control', min: 0, step: 0.01 %>
-              <%= f.error_message_on :minimum_order_amount %>
-            </div>
-          </div>
+        <div class="form-group">
+          <%= f.label :amount, raw(Spree.t(:amount) + required_span_tag) %>
+          <%= f.number_field :amount, class: 'form-control', disabled: f.object.persisted?, required: true %>
+          <%= f.error_message_on :amount %>
         </div>
-
         <div class="form-group">
           <%= f.label :codes_count, raw(Spree.t('admin.gift_card_batches.codes_count') + required_span_tag) %>
-          <%= f.number_field :codes_count, class: 'form-control', disabled: f.object.persisted?, required: true %>
+          <%= f.number_field :codes_count, class: 'form-control', disabled: f.object.persisted?, required: true, min: 1, max: Spree::Config[:gift_card_batch_limit] %>
           <%= f.error_message_on :codes_count %>
         </div>
-
         <div class="form-group">
           <%= f.label :expires_at, Spree.t(:expires_at) %>
           <%= f.date_field :expires_at, class: 'form-control', disabled: f.object.persisted? %>
