--- a/admin/app/views/spree/admin/shared/_user.html.erb
+++ b/admin/app/views/spree/admin/shared/_user.html.erb
@@ -1,4 +1,4 @@
-<%= link_to spree.admin_user_path(user), class: 'rounded hover-light p-2 d-flex justify-content-start align-items-center', data: {turbo_frame: :_top, row_link_target: :link} do %>
+<%= link_to spree.admin_user_path(user), class: 'rounded p-2 d-flex justify-content-start align-items-center', data: {turbo_frame: :_top, row_link_target: :link} do %>
   <% if user.name.present? %>
     <%= render_avatar(user, width: 48, height: 48, class: 'mr-3 avatar') %>
   <% else %>
@@ -13,12 +13,7 @@
       <span class="text-muted with-tip" title="<%= user.email %>">
         <%= user.email %>
       </span>
-      <span data-controller="clipboard">
-        <%= hidden_field_tag :user_email, user.email, data: { clipboard_target: 'source' } %>
-        <button data-action="clipboard#copy" class="btn btn-sm text-muted with-tip mx-1" title="Copy email">
-          <%= icon 'files', class: 'mr-0' %>
-        </button>
-      </span>
+      <%= clipboard_component(user.email) %>
     <% end %>
   </div>
 <% end %>
