--- a/admin/app/assets/stylesheets/spree/admin/components/_buttons.scss
+++ b/admin/app/assets/stylesheets/spree/admin/components/_buttons.scss
@@ -174,6 +174,16 @@ button[disabled]        .show-when-enabled { display: none; }
   }
 }
 
+.btn-clipboard {
+  @extend .btn-light;
+  @extend .px-1;
+  @extend .ml-2;
+  @extend .font-size-sm;
+
+  min-width: 24px;
+  height: 24px;
+}
+
 .page-link {
   @extend .btn;
   @extend .btn-sm;
