--- a/admin/app/views/spree/admin/dashboard/_store_preview.html.erb
+++ b/admin/app/views/spree/admin/dashboard/_store_preview.html.erb
@@ -12,15 +12,9 @@
     <% end %>
 
     <div class="card-body px-2 pt-0 pb-2">
-      <div class="flex my-2 p-1 w-100 rounded border" data-controller="clipboard" data-clipboard-success-content-value="Copied!">
-        <% if current_store.default_custom_domain&.active? %>
-          <%= text_field_tag :custom_domain, current_store.default_custom_domain.url, readonly: true, class: 'form-control-plaintext py-0', data: { clipboard_target: 'source' } %>
-        <% else %>
-          <%= text_field_tag :domain, current_store.url, readonly: true, class: 'form-control-plaintext py-0', data: { clipboard_target: 'source' } %>
-        <% end %>
-        <button data-action="clipboard#copy" data-clipboard-target="button" class="btn btn-sm py-1 hover-gray">
-          Copy
-        </button>
+      <div class="flex my-2 p-1 w-100 rounded border">
+        <%= text_field_tag :domain, current_store.url_or_custom_domain, readonly: true, class: 'form-control-plaintext py-0' %>
+        <%= clipboard_component(current_store.url_or_custom_domain) %>
       </div>
 
       <div class="d-flex">
