--- a/admin/app/views/spree/admin/orders/_return_authorizations.html.erb
+++ b/admin/app/views/spree/admin/orders/_return_authorizations.html.erb
@@ -19,7 +19,7 @@
           <tbody>
             <%= render partial: "spree/admin/orders/return_authorizations/return_authorization",
             collection: @return_authorizations,
-            cached: ->(r = nil) { [spree_base_cache_key, r, r.return_items] } %>
+            cached: ->(r) { [spree_base_cache_key, r.cache_key_with_version, r.return_items.maximum(:updated_at)] } %>
           </tbody>
         </table>
       </div>
