--- a/admin/app/views/spree/admin/gift_cards/_list.html.erb
+++ b/admin/app/views/spree/admin/gift_cards/_list.html.erb
@@ -6,6 +6,7 @@
           <th><%= Spree.t(:code) %></th>
           <th><%= Spree.t(:amount) %></th>
           <th><%= Spree.t(:used) %></th>
+          <th><%= Spree.t(:currency) %></th>
           <th><%= Spree.t(:status) %></th>
           <th><%= Spree.t(:expires_at) %></th>
           <th><%= Spree.t('admin.gift_cards.issued_to') %></th>
