Improve small forms UX to center them on screen

--- a/admin/app/views/spree/admin/custom_domains/new.html.erb
+++ b/admin/app/views/spree/admin/custom_domains/new.html.erb
@@ -7,7 +7,7 @@
 
 <%= form_for @object, url: spree.admin_custom_domains_path do |f| %>
   <div class="row">
-    <div class="col-lg-6">
+    <div class="col-lg-6 offset-lg-3">
       <%= render partial: 'form', locals: { f: f } %>
       <%= render partial: 'spree/admin/shared/new_resource_links' %>
     </div>
