--- a/admin/app/views/spree/admin/custom_domains/edit.html.erb
+++ b/admin/app/views/spree/admin/custom_domains/edit.html.erb
@@ -7,7 +7,7 @@
 
 <%= form_for @object, url: spree.admin_custom_domain_path(@object) do |f| %>
   <div class="row">
-    <div class="col-lg-6">
+    <div class="col-lg-6 offset-lg-3">
       <%= render partial: 'form', locals: { f: f } %>
       <%= render partial: 'spree/admin/shared/edit_resource_links', locals: { f: f } %>
     </div>
