--- a/admin/app/views/spree/admin/promotions/_actions.html.erb
+++ b/admin/app/views/spree/admin/promotions/_actions.html.erb
@@ -1,5 +1,5 @@
 <div class="card mb-4 bg-transparent">
-  <div class="card-header d-flex justify-content-between border-0">
+  <div class="card-header d-flex justify-content-between border-0 px-2">
     <h5 class="card-title">
       <%= icon('bolt', class: 'mr-2') %>
       <%= Spree.t(:promotion_actions) %>
