--- a/admin/app/views/spree/admin/promotions/_rules.html.erb
+++ b/admin/app/views/spree/admin/promotions/_rules.html.erb
@@ -1,5 +1,5 @@
 <div class="card mb-4 bg-transparent">
-  <div class="card-header d-flex justify-content-between">
+  <div class="card-header d-flex justify-content-between px-2">
     <h5 class="card-title">
       <%= icon('checklist', class: 'mr-2') %>
       <%= Spree.t(:rules) %>
