--- a/admin/app/views/spree/admin/properties/edit.html.erb
+++ b/admin/app/views/spree/admin/properties/edit.html.erb
@@ -5,11 +5,15 @@
 
 
 <%= form_for [:admin, @property] do |f| %>
-  <div class="card mb-4">
-    <div class="card-body">
-      <%= render partial: 'spree/admin/shared/error_messages', locals: { target: @property } %>
-      <%= render 'form', f: f %>
+  <div class="row">
+    <div class="col-lg-6 offset-lg-3">
+      <div class="card mb-4">
+        <div class="card-body">
+          <%= render partial: 'spree/admin/shared/error_messages', locals: { target: @property } %>
+          <%= render 'form', f: f %>
+        </div>
+      </div>
+      <%= render 'spree/admin/shared/edit_resource_links', f: f %>
     </div>
   </div>
-  <%= render 'spree/admin/shared/edit_resource_links', f: f %>
 <% end %>
