--- a/admin/app/views/spree/admin/reimbursement_types/edit.html.erb
+++ b/admin/app/views/spree/admin/reimbursement_types/edit.html.erb
@@ -6,7 +6,7 @@
 <%= render partial: 'spree/admin/shared/error_messages', locals: { target: @reimbursement_type } %>
 
 <div class="row">
-  <div class="col-lg-6">
+  <div class="col-lg-6 offset-lg-3">
     <%= form_with model: @reimbursement_type, :url => object_url, :method => :put, scope: :reimbursement_type do |reimbursement_form| %>
       <%= render partial: 'form', locals: { f: reimbursement_form } %>
       <%= render 'spree/admin/shared/edit_resource_links', f: reimbursement_form %>
