--- a/admin/app/views/spree/admin/taxonomies/new.html.erb
+++ b/admin/app/views/spree/admin/taxonomies/new.html.erb
@@ -5,7 +5,7 @@
 <%= render partial: 'spree/admin/shared/error_messages', locals: { target: @taxonomy } %>
 
 <div class="row">
-  <div class="col-lg-6">
+  <div class="col-lg-6 offset-lg-3">
     <%= form_for [:admin, @taxonomy] do |f| %>
       <div class="card mb-4">
         <div class="card-body">
