--- a/admin/app/views/spree/admin/payments/_payment.html.erb
+++ b/admin/app/views/spree/admin/payments/_payment.html.erb
@@ -25,7 +25,7 @@
           <%= link_to_with_icon 'eye', Spree.t(:details), payment.gateway_dashboard_payment_url, class: 'dropdown-item', target: '_blank' %>
         <% end %>
         <% if payment.source.is_a?(Spree::StoreCredit) && payment.source.respond_to?(:gift_card) && payment.source.gift_card.present? %>
-          <%= link_to_with_icon 'eye', Spree.t(:details), spree.edit_admin_gift_card_path(payment.source.gift_card), class: 'dropdown-item' %>
+          <%= link_to_with_icon 'eye', Spree.t(:details), spree.admin_gift_card_path(payment.source.gift_card), class: 'dropdown-item' %>
         <% end %>
 
         <% if can?(:update, payment) && (payment.checkout? || payment.pending?) %>
@@ -72,7 +72,7 @@
       <% end %>
     </div>
   </div>
-  <% if payment.transaction_id.present? %>
+  <% if payment.transaction_id.present? && !payment.store_credit? %>
     <div class="card-footer border-top border-top-dashed">
       <p class="mb-0 d-flex justify-content-between align-items-center">
         <span>
