--- a/core/app/views/spree/shared/_payment.html.erb
+++ b/core/app/views/spree/shared/_payment.html.erb
@@ -13,7 +13,7 @@
     </div>
   <% elsif source.is_a?(Spree::StoreCredit) %>
     <% if source.respond_to?(:gift_card) && source.gift_card.present? %>
-      <div class="d-flex flex rounded bg-light px-3 py-2 mb-3 align-items-center">
+      <div class="d-flex align-items-center text-decoration-none w-100 h-100">
         <%= icon('gift', height: 30, class: 'mr-3 text-muted') %>
         <div>
           <p class="mb-1"><%= Spree.t(:gift_card) %>: <strong><%= source.gift_card.code.upcase %></strong></p>
