--- a/storefront/app/views/themes/default/spree/account/gift_cards/_gift_card.html.erb
+++ b/storefront/app/views/themes/default/spree/account/gift_cards/_gift_card.html.erb
@@ -1,6 +1,6 @@
 <tr class="flex flex-wrap w-full md:table-row md:h-[72px] border border-accent md:border-none mb-4 p-4 md:p-0 hover:bg-accent-100" id="<%= dom_id(gift_card) %>">
   <td class="mb-4 w-full md:w-auto md:px-4 md:border-y border-accent md:border-l font-medium">
-    <%= gift_card.code %>
+    <%= gift_card.code.upcase %>
   </td>
 
   <td class="mb-4 w-full md:w-auto md:px-4 md:border-y border-accent">
