Improve admin sidebar, external links and hover CSS classes

--- a/admin/app/assets/stylesheets/spree/admin/components/_buttons.scss
+++ b/admin/app/assets/stylesheets/spree/admin/components/_buttons.scss
@@ -68,7 +68,7 @@ button[disabled]        .show-when-enabled { display: none; }
 
 .hover-light {
   &:hover, &:focus {
-    background-color: $dropdown-link-hover-bg;
+    background-color: $gray-25;
     text-decoration: none;
   }
 }
