--- a/admin/app/views/spree/admin/promotion_rules/_promotion_rule.html.erb
+++ b/admin/app/views/spree/admin/promotion_rules/_promotion_rule.html.erb
@@ -5,7 +5,7 @@
 
       <% if can?(:update, promotion_rule) || can?(:destroy, promotion_rule) %>
         <div class="dropdown">
-          <button class="btn btn-light btn-sm" type="button" data-toggle="dropdown" aria-expanded="false">
+          <button class="btn btn-light btn-sm px-1" type="button" data-toggle="dropdown" aria-expanded="false">
             <%= icon('dots-vertical', class: 'mr-0') %>
         </button>
         <div class="dropdown-menu">
