--- a/admin/app/views/spree/admin/store_credits/new.html.erb
+++ b/admin/app/views/spree/admin/store_credits/new.html.erb
@@ -10,17 +10,20 @@
 <%= render partial: 'spree/admin/shared/error_messages', locals: { target: @store_credit } %>
 
 <%= form_for @store_credit, url: spree.admin_user_store_credits_path(@user, @store_credit) do |f| %>
-  <div class="card mb-4">
-    <div class="card-header">
-      <h5 class="card-title">
-        <%= Spree.t(:store_credits) %>
-      </h5>
-    </div>
+  <div class="row">
+    <div class="col-lg-6 offset-lg-3">
+      <div class="card mb-4">
+        <div class="card-header">
+          <h5 class="card-title">
+            <%= Spree.t(:store_credits) %>
+          </h5>
+        </div>
 
-    <div class="card-body">
-      <%= render 'form', f: f %>
+        <div class="card-body">
+          <%= render 'form', f: f %>
+        </div>
+      </div>
+      <%= render partial: 'spree/admin/shared/new_resource_links', locals: { collection_url: spree.admin_user_store_credits_path(@user) } %>
     </div>
   </div>
-
-  <%= render partial: 'spree/admin/shared/new_resource_links', locals: { collection_url: spree.admin_user_store_credits_path(@user) } %>
 <% end %>
