Enhance Store Credit management UI
Add Store Credit and Store Credit events view

--- a/admin/app/assets/stylesheets/spree/admin/global/_variables.scss
+++ b/admin/app/assets/stylesheets/spree/admin/global/_variables.scss
@@ -213,4 +213,6 @@ $list-group-item-padding-x:         1rem !default;
 
 $header-height: 52px !default;
 $sidebar-width: 220px !default;
-$sidebar-bg: $body-bg !default;
+$sidebar-bg: $gray-25 !default;
+
+$progress-bar-bg: $blue !default;
