--- a/admin/app/views/spree/admin/promotions/_sidebar.html.erb
+++ b/admin/app/views/spree/admin/promotions/_sidebar.html.erb
@@ -116,7 +116,7 @@
         </li>
         <li class="list-group-item d-flex justify-content-between align-items-center">
           <span class="text-muted">
-            <%= I18n.t('activerecord.attributes.spree/promotion.expires_at') %>
+            <%= Spree.t(:expires_at) %>
           </span>
           <% if @promotion.expires_at %>
             <span><%= local_time(@promotion.expires_at) %></span>
