--- a/admin/app/views/spree/admin/shared/_edit_resource_links.html.erb
+++ b/admin/app/views/spree/admin/shared/_edit_resource_links.html.erb
@@ -1,6 +1,8 @@
+<% destroy_url = defined?(destroy_url) && destroy_url ? destroy_url : object_url(f.object) %>
+
 <div class="form-actions">
   <%= turbo_save_button_tag Spree.t('actions.update') %>
   <% if f.object.can_be_deleted? && can?(:delete, f.object) %>
-    <%= link_to Spree.t('actions.destroy'), object_url(f.object), data: { turbo_method: :delete, turbo_confirm: Spree.t(:are_you_sure_delete), turbo_frame: defined?(turbo_frame) ? turbo_frame : nil }, class: 'btn btn-danger ml-auto' %>
+    <%= link_to Spree.t('actions.destroy'), destroy_url, data: { turbo_method: :delete, turbo_confirm: Spree.t(:are_you_sure_delete), turbo_frame: defined?(turbo_frame) ? turbo_frame : '_top' }, class: 'btn btn-danger ml-auto' %>
   <% end %>
 </div>
