--- a/admin/app/views/spree/admin/gift_card_batches/_form.html.erb
+++ b/admin/app/views/spree/admin/gift_card_batches/_form.html.erb
@@ -24,7 +24,7 @@
           <%= f.error_message_on :codes_count %>
         </div>
         <div class="form-group">
-          <%= f.label :expires_at, I18n.t('activerecord.attributes.spree/gift_card.expires_at') %>
+          <%= f.label :expires_at, Spree.t(:expires_at) %>
           <%= f.date_field :expires_at, class: 'form-control', disabled: f.object.persisted? %>
           <%= f.error_message_on :expires_at %>
         </div>
