--- a/storefront/app/views/themes/default/spree/account/gift_cards/_gift_card.html.erb
+++ b/storefront/app/views/themes/default/spree/account/gift_cards/_gift_card.html.erb
@@ -16,7 +16,7 @@
 
   <td class="w-full md:w-auto md:px-4 md:border-y border-accent">
     <span class="md:hidden font-medium mr-1"><%= Spree.t(:used) %>:</span>
-    <%= gift_card.display_used_amount %>
+    <%= gift_card.display_amount_used %>
   </td>
 
   <td class="w-full md:w-auto md:px-4 md:border-y md:border-r border-accent">
