--- a/admin/app/views/spree/admin/gift_cards/_list.html.erb
+++ b/admin/app/views/spree/admin/gift_cards/_list.html.erb
@@ -20,5 +20,5 @@
   <%= render partial: 'spree/admin/shared/index_table_options', locals: { collection: @collection } %>
 <% else %>
   <% new_object_url = @user.present? ? spree.new_admin_user_gift_card_path(@user) : spree.new_admin_gift_card_path %>
-  <%= render 'spree/admin/shared/no_resource_found', model_class: Spree::GiftCard, new_object_url: spree.new_admin_user_gift_card_path(@user) %>
+  <%= render 'spree/admin/shared/no_resource_found', model_class: Spree::GiftCard, new_object_url: new_object_url %>
 <% end %>
