--- a/admin/app/views/spree/admin/gift_cards/index.csv.erb
+++ b/admin/app/views/spree/admin/gift_cards/index.csv.erb
@@ -7,7 +7,7 @@
   <%= CSV.generate_line([
     gift_card.code.upcase,
     gift_card.amount.to_f,
-    gift_card.used_amount.to_f,
+    gift_card.amount_used.to_f,
     gift_card.display_state,
     gift_card.expires_at,
     ]).strip.html_safe %>
