--- a/admin/app/views/spree/admin/gift_cards/new.html.erb
+++ b/admin/app/views/spree/admin/gift_cards/new.html.erb
@@ -10,7 +10,9 @@
 
 <%= render partial: 'spree/admin/shared/error_messages', locals: { target: @object } %>
 
-<%= form_for [:admin, @user, @object] do |f| %>
+<% url = @user.present? ? spree.admin_user_gift_cards_path(@user) : spree.admin_gift_cards_path %>
+
+<%= form_for @object, url: url do |f| %>
   <div class="row">
     <div class="col-lg-6 offset-lg-3">
       <div class="card mb-4">
