--- a/admin/app/assets/stylesheets/spree/admin/components/_navbar.scss
+++ b/admin/app/assets/stylesheets/spree/admin/components/_navbar.scss
@@ -1,6 +1,6 @@
 #header {
   height: $header-height;
-  background-color: $body-bg;
+  background-color: $header-bg;
 
   box-shadow: inset 0 -1px 0 $border-color;
 }
