--- a/admin/app/assets/stylesheets/spree/admin/global/_variables.scss
+++ b/admin/app/assets/stylesheets/spree/admin/global/_variables.scss
@@ -211,7 +211,8 @@ $code-color: $gray-600 !default;
 $list-group-bg: transparent !default;
 $list-group-item-padding-x:         1rem !default;
 
-$header-height: 52px !default;
+$header-bg: $gray-25 !default;
+$header-height: 60px !default;
 $sidebar-width: 220px !default;
 $sidebar-bg: $gray-25 !default;
 
