Cleanup SASS variables

--- a/admin/app/assets/stylesheets/spree/admin/components/_buttons.scss
+++ b/admin/app/assets/stylesheets/spree/admin/components/_buttons.scss
@@ -176,6 +176,7 @@ button[disabled]        .show-when-enabled { display: none; }
 
 .btn-clipboard {
   @extend .btn-light;
+  @extend .btn-sm;
   @extend .px-1;
   @extend .ml-2;
   @extend .font-size-sm;
