--- a/admin/app/assets/stylesheets/spree/admin/components/_tables.scss
+++ b/admin/app/assets/stylesheets/spree/admin/components/_tables.scss
@@ -205,3 +205,9 @@ td.actions {
     }
   }
 }
+
+.pagination-container {
+  border-top: 1px solid $gray-50;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
