gift cards view fixes

--- a/admin/app/views/spree/admin/taxonomies/new.html.erb
+++ b/admin/app/views/spree/admin/taxonomies/new.html.erb
@@ -6,6 +6,7 @@
 <div class="row">
   <div class="col-lg-6 offset-lg-3">
     <%= form_for [:admin, @taxonomy] do |f| %>
+      <%= render partial: 'spree/admin/shared/error_messages', locals: { target: @taxonomy } %>
       <div class="card mb-4">
         <div class="card-body">
           <%= render partial: 'spree/admin/shared/error_messages', locals: { target: @taxonomy } %>
