--- a/admin/app/views/spree/admin/gift_cards/_filters.html.erb
+++ b/admin/app/views/spree/admin/gift_cards/_filters.html.erb
@@ -3,7 +3,7 @@
 
 <%= search_form_for @search,
   url: filter_form_url,
-  class: "filter-wrap border-bottom",
+  class: "filter-wrap",
   data: {
     controller: "filters reveal",
     reveal_hidden_class: "d-none",
