--- a/admin/app/views/spree/admin/shared/_index_table_options.html.erb
+++ b/admin/app/views/spree/admin/shared/_index_table_options.html.erb
@@ -6,7 +6,7 @@
 <% end %>
 
 <% if collection.any? %>
-  <div class="py-2 border-top">
+  <div class="pagination-container">
     <div class="index-pagination-row d-flex align-items-center">
       <div class="col-6 col-lg-3">
         <%= per_page_dropdown %>
