Improve `<code>` element in admin

--- a/admin/app/assets/stylesheets/spree/admin/global/_variables.scss
+++ b/admin/app/assets/stylesheets/spree/admin/global/_variables.scss
@@ -207,6 +207,7 @@ $embed-responsive-aspect-ratios: (
 $table-cell-padding: .75rem .50rem !default;
 
 $code-color: $gray-600 !default;
+$code-bg: $gray-25 !default;
 
 $list-group-bg: transparent !default;
 $list-group-item-padding-x:         1rem !default;
